exports[`modularScale should allow adjusting the base 1`] = `
Object {
  "font-size": "2.666em",
}
`;

exports[`modularScale should allow adjusting the ratio 1`] = `
Object {
  "font-size": "1em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 1`] = `
Object {
  "font-size": "1.067em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 2`] = `
Object {
  "font-size": "1.125em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 3`] = `
Object {
  "font-size": "1.2em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 4`] = `
Object {
  "font-size": "1.25em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 5`] = `
Object {
  "font-size": "1.333em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 6`] = `
Object {
  "font-size": "1.414em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 7`] = `
Object {
  "font-size": "1.5em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 8`] = `
Object {
  "font-size": "1.6em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 9`] = `
Object {
  "font-size": "1.618em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 10`] = `
Object {
  "font-size": "1.667em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 11`] = `
Object {
  "font-size": "1.778em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 12`] = `
Object {
  "font-size": "1.875em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 13`] = `
Object {
  "font-size": "2em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 14`] = `
Object {
  "font-size": "2.5em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 15`] = `
Object {
  "font-size": "2.667em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 16`] = `
Object {
  "font-size": "3em",
}
`;

exports[`modularScale should allow any of the predefined ratio names 17`] = `
Object {
  "font-size": "4em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 1`] = `
Object {
  "font-size": "1.333em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 2`] = `
Object {
  "font-size": "1.776889em",
}
`;

exports[`modularScale should use perfect fourth and 1em base by default 3`] = `
Object {
  "font-size": "1em",
}
`;
